--- a/udp-quotes-service/README.adoc
+++ b/udp-quotes-service/README.adoc
@@ -1,12 +1,18 @@
 [source,bash]
 .filename
 ----
-#install kong
-
+# Add Kong Helm chart repo
 helm repo add kong https://charts.konghq.com
 helm repo update
 
+# Review and modify values
+helm show values kong/kong > values-default.yaml
+
+# Install Kong via Helm
 helm install kong kong/kong -n kong -f values.yaml
+
+# Upgrade Kong
+helm upgrade kong kong/kong -n kong -f values.yaml 
 
 # deploy nc container to test connectivity 
 kubectl -n udpingress-example run nc -it --rm --image=chilcano/netcat:jessie -- sh
