--- a/quotes-service/README.adoc
+++ b/quotes-service/README.adoc
@@ -52,6 +52,8 @@ export PROXY_IP=`kgs --namespace kong kong-proxy -ojson | jq -r '.status.loadBal
 <1> create API key
 <2> get external IP
 
+== optional - prometheus and grafana
 
+helm install prometheus prometheus-community/prometheus --namespace monitoring --create-namespace --values prometheus.yaml
 
-
+helm install grafana grafana/grafana --namespace monitoring --values grafana.yaml 
